[Bug #1035] Changed left margin of timeplot to fix gantt alignment issues
FEA: ItEr74S04BugFixing

--- a/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
@@ -1631,3 +1631,12 @@ input.z-datebox-text-disd {
 .assignedresources .z-auxheader-cnt  {
     font-weight: bold;
 }
+
+.scheduling-graphics .z-south-header {
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+.timeplot-container {
+    margin-left: 8px;
+}
